--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div class="container">
         <h1> Payment</h1>
         <form id="payment-form">
-            <label for="amount">Amount (USD)</label>
+            <label for="amount">Amount (NPR)</label>
             <input type="number" id="amount" placeholder="Enter amount" required min="1" step="0.01">
             <label for="card-element">Credit or debit card</label>
             <div id="card-element"></div>
