--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NPR Payment Gateway</title>
+    <title>Payment</title>
     <script src="https://js.stripe.com/v3/"></script>
     <style>
         :root {
@@ -117,8 +118,13 @@
         }
 
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
         }
 
         .theme-toggle {
@@ -170,11 +176,11 @@
             border-radius: 50%;
         }
 
-        input:checked + .slider {
+        input:checked+.slider {
             background-color: #2196F3;
         }
 
-        input:checked + .slider:before {
+        input:checked+.slider:before {
             transform: translateX(26px);
         }
 
@@ -202,6 +208,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="theme-toggle">
         <label for="theme-switch">Dark Mode</label>
@@ -211,11 +218,11 @@
         </label>
     </div>
     <div class="container">
-        <h1>NPR Payment Gateway</h1>
+        <h1>Payment</h1>
         <form id="payment-form">
             <label for="amount">Amount (NPR)</label>
             <input type="number" id="amount" placeholder="Enter amount in NPR" required min="1" step="1">
-            
+
             <div class="payment-options">
                 <div class="payment-option">
                     <input type="radio" id="phone-option" name="payment-method" value="phone" checked>
@@ -228,14 +235,14 @@
             </div>
 
             <div id="phone-fields" class="payment-fields active">
-                <label for="phone">Phone Number</label>
+                <label for="phone">Phone Number(Esawa,Khalti)</label>
                 <input type="tel" id="phone" placeholder="Enter phone number" pattern="[0-9]{10}">
             </div>
 
             <div id="card-fields" class="payment-fields">
                 <div id="card-element"></div>
             </div>
-            
+
             <button type="submit" id="submit-button">
                 <span id="button-text">Pay Now</span>
                 <div class="spinner" id="spinner"></div>
@@ -310,7 +317,7 @@
         }
 
         function updateCardElementStyle() {
-            cardElement.update({style: getCardElementStyle()});
+            cardElement.update({ style: getCardElementStyle() });
         }
 
         initializeStripe();
@@ -393,4 +400,5 @@
         }
     </script>
 </body>
+
 </html>
