--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             </div>
 
             <div id="phone-fields" class="payment-fields active">
-                <label for="phone">Phone Number(Esawa,Khalti)</label>
+                <label for="phone">Phone Number(Esewa,Khalti)</label>
                 <input type="tel" id="phone" placeholder="Enter phone number" pattern="[0-9]{10}">
             </div>
 
