--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="payment-options">
                 <div class="payment-option">
                     <input type="radio" id="phone-option" name="payment-method" value="phone" checked>
-                    <label for="phone-option">Phone Number</label>
+                    <label for="phone-option">Phone Number(Esawa)</label>
                 </div>
                 <div class="payment-option">
                     <input type="radio" id="card-option" name="payment-method" value="card">
@@ -235,7 +235,7 @@
             </div>
 
             <div id="phone-fields" class="payment-fields active">
-                <label for="phone">Phone Number(Esewa,Khalti)</label>
+
                 <input type="tel" id="phone" placeholder="Enter phone number" pattern="[0-9]{10}">
             </div>
 
