--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <div class="payment-options">
                 <div class="payment-option">
                     <input type="radio" id="phone-option" name="payment-method" value="phone" checked>
-                    <label for="phone-option">Phone Number(Esawa)</label>
+                    <label for="phone-option">Phone Number(Esewa)</label>
                 </div>
                 <div class="payment-option">
                     <input type="radio" id="card-option" name="payment-method" value="card">
